Added PhoneVerificationPage spec file. Also removed old code from the the app.

--- a/fed-main/index.html
+++ b/fed-main/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.svg" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Go Book Me - Online</title>
+    <title>Go Book Me - Today</title>
   </head>
   <body>
     <div id="app"></div>
